--- a/source/form.html
+++ b/source/form.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
-  <header class="page-header page-header__container">
-    <a class="page-header__logo" href="index.html">
-      <picture>
-        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
-        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+  <header class="page-header">
+    <div class="page-header__container">
+      <a class="page-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
           <img class="page-header__logo-img" src="img/logo-mobile.svg" width="192" height="66" alt="Логотип Cat Energy">
-      </picture>
-    </a>
-    <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
+        </picture>
+      </a>
+      <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden">Открыть меню</span>
+          <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list main-menu">
           <li class="main-menu__item">
@@ -33,6 +34,7 @@
           </li>
         </ul>
       </nav>
+    </div>
   </header>
   <main class="page-main">
     <form class="page-main__form form" action="https://echo.htmlacademy.ru" method="POST">
@@ -70,90 +72,88 @@
           </ul>
         </div>
       </div>
-        <fieldset class="form__fieldset form__fieldset--owner">
-          <div class="form__container">
-            <h2 class="form__legend form__legend--owner">Контактные данные (владельца кота)</h2>
-            <ul class="form__list form__list--contacts">
-              <li class="form__item">
-                <label class="form__label form__label--email" for="form-email">e-mail:*</label>
-                <input class="form__input-text form__input-text--email" type="email" placeholder="kuklachev@gmail.com" id="form-email" name="email" required>
-                  <svg class="form__input-icon form__input-icon--email" width="17" height="42" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
-                    <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
-                  </svg>
-              </li>
-              <li class="form__item">
-                <label class="form__label form__label--phone" for="form-phone">телефон:*</label>
-                <input class="form__input-text form__input-text--phone" type="tel" placeholder="8 (960) 900-60-90" id="form-phone" name="phone" required>
-                  <svg class="form__input-icon form__input-icon--phone" width="22" height="42" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
-                    <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
-                    <path
-                      d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+      <fieldset class="form__fieldset form__fieldset--owner">
+        <div class="form__container">
+          <h2 class="form__legend form__legend--owner">Контактные данные (владельца кота)</h2>
+          <ul class="form__list form__list--contacts">
+            <li class="form__item">
+              <label class="form__label form__label--email" for="form-email">e-mail:*</label>
+              <input class="form__input-text form__input-text--email" type="email" placeholder="kuklachev@gmail.com" id="form-email" name="email" required>
+              <svg class="form__input-icon form__input-icon--email" width="17" height="42" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z" />
+              </svg>
+            </li>
+            <li class="form__item">
+              <label class="form__label form__label--phone" for="form-phone">телефон:*</label>
+              <input class="form__input-text form__input-text--phone" type="tel" placeholder="8 (960) 900-60-90" id="form-phone" name="phone" required>
+              <svg class="form__input-icon form__input-icon--phone" width="22" height="42" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z" />
+                <path d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
                     c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
                     C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
-                    C7.8,20,8.1,19.7,8.1,19.4z"/>
-                  </svg>
-              </li>
-            </ul>
-          </div>
-        </fieldset>
-        <fieldset class="form__fieldset form__fieldset--comments">
-          <div class="form__container">
-            <h2 class="form__legend form__legend--comments">Комментарий</h2>
-            <div class="form__comments-wrapper">
-              <textarea class="form__textarea" placeholder="Расскажите обо всех повадках кота" name="comments"></textarea>
-            </div>
-          </div>
-        </fieldset>
-        <fieldset class="form__fieldset">
-          <div class="form__container">
-            <h2 class="form__legend form__legend--additional">Дополнительно</h2>
-            <ul class="form__list form__list--additional">
-              <li class="form__item">
-                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-sweetener" name="sweetener" checked>
-                <label class="form__label form__label--checkbox" for="form-sweetener">Сахарозаменитель</label>
-              </li>
-              <li class="form__item">
-                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-drinkwater" name="drinkwater">
-                <label class="form__label form__label--checkbox" for="form-drinkwater">Питьевая вода</label>
-              </li>
-              <li class="form__item">
-                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-milk" name="milk">
-                <label class="form__label form__label--checkbox" for="form-milk">Молоко</label>
-              </li>
-              <li class="form__item">
-                <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-vitamins" name="vitamins">
-                <label class="form__label form__label--checkbox" for="form-vitamins">Витамины</label>
-              </li>
-            </ul>
-          </div>
-        </fieldset>
-        <div class="form__fieldset-button-wrapper form__container">
-          <button class="form__button" type="submit">Отправить заявку</button>
-          <p class="form__required-notify">* — Обязательные поля</p>
+                    C7.8,20,8.1,19.7,8.1,19.4z" />
+              </svg>
+            </li>
+          </ul>
         </div>
+      </fieldset>
+      <fieldset class="form__fieldset form__fieldset--comments">
+        <div class="form__container">
+          <h2 class="form__legend form__legend--comments">Комментарий</h2>
+          <div class="form__comments-wrapper">
+            <textarea class="form__textarea" placeholder="Расскажите обо всех повадках кота" name="comments"></textarea>
+          </div>
+        </div>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <div class="form__container">
+          <h2 class="form__legend form__legend--additional">Дополнительно</h2>
+          <ul class="form__list form__list--additional">
+            <li class="form__item">
+              <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-sweetener" name="sweetener" checked>
+              <label class="form__label form__label--checkbox" for="form-sweetener">Сахарозаменитель</label>
+            </li>
+            <li class="form__item">
+              <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-drinkwater" name="drinkwater">
+              <label class="form__label form__label--checkbox" for="form-drinkwater">Питьевая вода</label>
+            </li>
+            <li class="form__item">
+              <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-milk" name="milk">
+              <label class="form__label form__label--checkbox" for="form-milk">Молоко</label>
+            </li>
+            <li class="form__item">
+              <input class="form__input-checkbox visually-hidden" type="checkbox" id="form-vitamins" name="vitamins">
+              <label class="form__label form__label--checkbox" for="form-vitamins">Витамины</label>
+            </li>
+          </ul>
+        </div>
+      </fieldset>
+      <div class="form__fieldset-button-wrapper form__container">
+        <button class="form__button" type="submit">Отправить заявку</button>
+        <p class="form__required-notify">* — Обязательные поля</p>
+      </div>
     </form>
     <section class="contacts">
-        <div class="contacts__container">
-          <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
-        </div>
-        <div class="contacts__map"></div>
-      </section>
-    </main>
-    <footer class="page-footer">
-        <div class="page-footer__container">
-          <a class="page-footer__logo page-footer__logo--link">
-            <img class="page-footer__logo-img" src="img/logo-footer.svg" width="129" height="24" alt="Cat Energy">
-          </a>
-          <div class="page-footer__social social">
-            <ul class="social__list">
-              <h2 class="visually-hidden">Мы в социальных сетях</h2>
-              <li class="social__item">
-                <a class="social__link social__link--vk" href="#">
-                  <span class="visually-hidden">Вконтакте</span>
-                  <svg class="social__svg social__svg--vk" width="24" height="12" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
-    <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+      <div class="contacts__container">
+        <p class="contacts__item">приглашаем<br> к сотрудничеству дилеров!</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</p>
+      </div>
+      <div class="contacts__map"></div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__container">
+      <a class="page-footer__logo page-footer__logo--link">
+        <img class="page-footer__logo-img" src="img/logo-footer.svg" width="129" height="24" alt="Cat Energy">
+      </a>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <h2 class="visually-hidden">Мы в социальных сетях</h2>
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+              <svg class="social__svg social__svg--vk" width="24" height="12" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
       c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
       s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1
       C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
@@ -165,45 +165,44 @@
       c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
       c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
       C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
-      c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"/>
-    </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--insta" href="#">
-                  <span class="visually-hidden">Инстаграм</span>
-                  <svg class="social__svg social__svg--insta" width="17" height="16" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                  viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
-               <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
-                  M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
-               <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
-                 s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
-               <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
-               </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--fb" href="#">
-                  <span class="visually-hidden">Фейсбук</span>
-                  <svg class="social__svg social__svg--fb" width="11" height="19" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                  viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
-               <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
-                 h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
-                 z"/>
-               </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="page-footer__copyright copyright">
-            <h2 class="visually-hidden">Логотип разработчика сайта</h2>
-            <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
-            <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
-              <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
+      c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" />
+              </svg>
             </a>
-          </div>
-        </div>
-      </footer>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--insta" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+              <svg class="social__svg social__svg--insta" width="17" height="16" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
+                <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
+                  M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z" />
+                <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
+                 s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z" />
+                <circle class="st0" cx="12.3" cy="3.7" r="0.9" />
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+              <svg class="social__svg social__svg--fb" width="11" height="19" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+                 h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
+                 z" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <h2 class="visually-hidden">Логотип разработчика сайта</h2>
+        <a class="copyright__link" href="http://htmlacademy.ru">HTML Academy</a>
+        <a class="copyright__link-logo" href="http://htmlacademy.ru" aria-label="Переход на сайт в HTML Academy" target="_blank">
+          <svg class="copyright__logo-svg" width="40" height="46" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
+            <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" /></svg>
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
